# proteinmpnn_ddg

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.cpu  LICENSE  Makefile  ProteinMPNN_ddG.ipynb  ProteinMPNN_ddG_binding.ipynb  README.md  predict.py  pyproject.toml
example/: proteinmpnn_predictions.csv
paper/data/: coeff_esmif.csv  coeff_esmif_raw.csv  coeff_proteinmpnn_ddg_v_48_020.csv  timings_benchmark.csv
paper/datasets/s2648/: esmif_s2648.csv  other_predictors_s2648.csv  proteinmpnn_s2648.csv  s2648_ddg_experimental.csv
paper/datasets/s669/: esmif_s669.csv  proteinmpnn_s669.csv  rasp_s669.csv  s669_ddg_experimental.csv
paper/scripts/: backbone_opening_angles.py  benchmark_decode_last.py  build_proteinmpnn_delta_X_Y_plots.py  compute_shifts.py  compute_shifts_esmif.py  fit_methionine_coefficient_esmif_based_on_proteinmpnn.py  predict_datasets_esmif.py  predict_datasets_proteinmpnn_with_ablations.py  predict_proteome.py  reproduce_benchmark_tables.py
proteinmpnn_ddg/: __init__.py  score_pdb.py  work_efficient_decode_last.py
